# gaps-notifier-api

./: .gitignore  Cargo.toml  Dockerfile  compose.yml  readme.md
.github/workflows/: docker-image.yml
src/: api.rs  db.rs  logic.rs  main.rs  models.rs
src/api/: authorization.rs  course_listener.rs  grade.rs  listener.rs  state.rs  subscriber.rs  user.rs
src/db/: db.rs  redis.rs
src/discord/: events.rs
src/logic/: course_listener.rs  grade.rs  listener.rs  spy.rs  subscriber.rs  time.rs  user.rs
src/models/: course_listener.rs  grade.rs  hashing.rs  identifiable.rs  listener.rs  spy.rs  subscriber.rs  user.rs
