[package]
name = "gaps-notifier-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Http framework
axum = "0.7.4"

# Async
tokio = { version = "1", features = ["full"] }

#Serialization and Deserialization
serde = { version = "~1.0.193", features = ["derive"] } 
serde_json = { version = "~1.0.108" } 
